--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SharePoint Portfolio | Jair Y.</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
 </head>
 <body>
     <header>
@@ -17,25 +15,30 @@
     <main id="projects">
         <h2>My Projects</h2>
 
-        <div class="project" data-aos="fade-up">
+        <!-- Project 1 -->
+        <div class="project">
             <img src="images/project1.png" alt="SharePoint Survey System">
-            <h3>SharePoint Survey System</h3>
-            <p>Automation of surveys using Power Automate and Power Apps.</p>
+            <h3>Financial operations management
+            <p>I'll translate it as ensuring the basic operations needed to handle negotiations,
+                authorizations, validations, and signatures required for buying and selling foreign currency in Claro.
         </div>
 
-        <div class="project" data-aos="fade-up">
+        <!-- Project 2 -->
+        <div class="project">
             <img src="images/project2.png" alt="Document Management System">
             <h3>Document Management System</h3>
             <p>Approval workflows and role-based security in SharePoint.</p>
         </div>
 
-        <div class="project" data-aos="fade-up">
+        <!-- Project 3 -->
+        <div class="project">
             <img src="images/project3.png" alt="Custom Web Parts with SPFx">
             <h3>Custom Web Parts with SPFx</h3>
             <p>Development of interactive web parts using SharePoint Framework.</p>
         </div>
 
-        <div class="project" data-aos="fade-up">
+        <!-- Project 4 -->
+        <div class="project">
             <img src="images/project4.png" alt="Company Intranet Portal">
             <h3>Company Intranet Portal</h3>
             <p>Design and implementation of a modern intranet using SharePoint Online.</p>
@@ -46,11 +49,6 @@
         <p>Contact: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
     </footer>
 
-    <script>
-        AOS.init({
-            duration: 1000, // Duración de la animación en milisegundos
-            once: true, // La animación solo se ejecuta una vez
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
