--- a/index.html
+++ b/index.html
@@ -1,54 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SharePoint Portfolio | Jair Y.</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <h1>Jair Y. Coronado A. | SharePoint Developer</h1>
-        <p>SPFx | React | TypeScript | Power Apps | Power Automate | PowerShell</p>
+      <h1>Jair Y. Coronado A. | SharePoint Developer</h1>
+      <p>
+        SPFx | React | TypeScript | Power Apps | Power Automate | PowerShell
+      </p>
     </header>
 
     <main id="projects">
-        <h2>My Projects</h2>
+      <h2>My Projects</h2>
 
-        <!-- Project 1 -->
-        <div class="project">
-            <img src="images/project1.png" alt="SharePoint Survey System">
-            <h3>Financial operations management
-            <p>I'll translate it as ensuring the basic operations needed to handle negotiations,
-                authorizations, validations, and signatures required for buying and selling foreign currency in Claro.
-        </div>
+      <!-- Project 1 -->
+      <div class="project">
+        <img src="images/project1.png" alt="Financial operations management" />
+        <h3>Financial operations management</h3>
+        <p>
+          I'll translate it as ensuring the basic operations needed to handle
+          negotiations, authorizations, validations, and signatures required for
+          buying and selling foreign currency in Claro.
+        </p>
+      </div>
 
-        <!-- Project 2 -->
-        <div class="project">
-            <img src="images/project2.png" alt="Document Management System">
-            <h3>Document Management System</h3>
-            <p>Approval workflows and role-based security in SharePoint.</p>
-        </div>
+      <!-- Project 2 -->
+      <div class="project">
+        <img src="images/project2.png" alt="Company Voting System" />
+        <h3>Company-wide Voting System</h3>
+        <p>
+          Storing Candidates, National Voting Processes, and Real-time Voting
+          Reports, developed efficient systems using classic SharePoint sites,
+          JavaScript, HTML, and Bootstrap to store and organize candidate
+          information securely. Implemented scalable voting processes with
+          secure permission management and encryption to handle large-scale
+          operations nationwide. Built real-time reporting tools ensuring
+          transparent tracking of voting progress and outcomes.
+        </p>
+      </div>
 
-        <!-- Project 3 -->
-        <div class="project">
-            <img src="images/project3.png" alt="Custom Web Parts with SPFx">
-            <h3>Custom Web Parts with SPFx</h3>
-            <p>Development of interactive web parts using SharePoint Framework.</p>
-        </div>
+      <!-- Project 3 -->
+      <div class="project">
+        <img src="images/project3.png" alt="Custom Web Parts with SPFx" />
+        <h3>Custom Web Parts with SPFx</h3>
+        <p>Development of interactive web parts using SharePoint Framework.</p>
+      </div>
 
-        <!-- Project 4 -->
-        <div class="project">
-            <img src="images/project4.png" alt="Company Intranet Portal">
-            <h3>Company Intranet Portal</h3>
-            <p>Design and implementation of a modern intranet using SharePoint Online.</p>
-        </div>
+      <!-- Project 4 -->
+      <div class="project">
+        <img src="images/project4.png" alt="Company Intranet Portal" />
+        <h3>Company Intranet Portal</h3>
+        <p>
+          Design and implementation of a modern intranet using SharePoint
+          Online.
+        </p>
+      </div>
     </main>
 
     <footer>
-        <p>Contact: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+      <p>
+        Contact:
+        <a href="mailto:jairyesidk@gmail.com">jairyesidk@gmail.com</a>
+      </p>
     </footer>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
