Added language toggle feature and improved project descriptions. Fixed HTML structure and added missing images.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <body>
     <header>
       <h1>Jair Y. Coronado A. | SharePoint Developer</h1>
-      <p>
-        SPFx | React | TypeScript | Power Apps | Power Automate | PowerShell
-      </p>
+      <p>SPFx | React | TypeScript | Power Apps | Power Automate | PowerShell</p>
+      <button id="languageToggle">Español</button>
     </header>
 
     <main id="projects">
@@ -19,53 +18,67 @@
 
       <!-- Project 1 -->
       <div class="project">
-        <img src="images/project1.png" alt="Financial operations management" />
-        <h3>Financial operations management</h3>
-        <p>
-          I'll translate it as ensuring the basic operations needed to handle
-          negotiations, authorizations, validations, and signatures required for
-          buying and selling foreign currency in Claro.
+        <img src="images/project1.png" alt="Financial Operations Management" />
+        <h3 id="project1-title">Financial Operations Management</h3>
+        <p id="project1-desc">
+          Developed a SharePoint-based system using JavaScript, CSS, and HTML for web components, Power Automate for document creation and approvals, and SharePoint Online for secure storage.
         </p>
+        <div class="additional-images">
+          <img src="images/project1-1.png" alt="Financial Operations Management" />
+          <img src="images/project1-2.png" alt="Financial Operations Management" />
+        </div>
       </div>
 
       <!-- Project 2 -->
       <div class="project">
         <img src="images/project2.png" alt="Company Voting System" />
-        <h3>Company-wide Voting System</h3>
-        <p>
-          Storing Candidates, National Voting Processes, and Real-time Voting
-          Reports, developed efficient systems using classic SharePoint sites,
-          JavaScript, HTML, and Bootstrap to store and organize candidate
-          information securely. Implemented scalable voting processes with
-          secure permission management and encryption to handle large-scale
-          operations nationwide. Built real-time reporting tools ensuring
-          transparent tracking of voting progress and outcomes.
+        <h3 id="project2-title">Company Voting System</h3>
+        <p id="project2-desc">
+          Designed a secure voting system using SharePoint, JavaScript, and Bootstrap, implementing real-time reporting and encrypted voting processes.
         </p>
+        <div class="additional-images">
+          <img src="images/project2-1.png" alt="Company Voting System" />
+          <img src="images/project2-2.png" alt="Company Voting System" />
+          <img src="images/project2-3.png" alt="Company Voting System" />
+        </div>
       </div>
 
       <!-- Project 3 -->
       <div class="project">
-        <img src="images/project3.png" alt="Custom Web Parts with SPFx" />
-        <h3>Custom Web Parts with SPFx</h3>
-        <p>Development of interactive web parts using SharePoint Framework.</p>
+        <img src="images/project3.png" alt="Corporate Requests System" />
+        <h3 id="project3-title">Corporate Requests System</h3>
+        <p id="project3-desc">
+          Created a ticketing system for pricing offers and product management, integrated with Power Automate for approvals and Excel exports.
+        </p>
+        <div class="additional-images">
+          <img src="images/project3-1.png" alt="Corporate Requests System" />
+          <img src="images/project3-2.png" alt="Corporate Requests System" />
+          <img src="images/project3-3.png" alt="Corporate Requests System" />
+          <img src="images/project3-4.png" alt="Corporate Requests System" />
+        </div>
       </div>
 
       <!-- Project 4 -->
       <div class="project">
         <img src="images/project4.png" alt="Company Intranet Portal" />
-        <h3>Company Intranet Portal</h3>
-        <p>
-          Design and implementation of a modern intranet using SharePoint
-          Online.
+        <h3 id="project4-title">Corporate Intranet Portal</h3>
+        <p id="project4-desc">
+          Migrated a legacy intranet to SharePoint using SPFx, React, and TypeScript, enabling role-based content management and scalable deployment.
         </p>
+        <div class="additional-images">
+          <img src="images/project4-1.png" alt="Company Intranet Portal" />
+          <img src="images/project4-2.png" alt="Company Intranet Portal" />
+          <img src="images/project4-3.png" alt="Company Intranet Portal" />
+          <img src="images/project4-4.png" alt="Company Intranet Portal" />
+          <img src="images/project4-5.png" alt="Company Intranet Portal" />
+          <img src="images/project4-6.png" alt="Company Intranet Portal" />
+          <img src="images/project4-7.png" alt="Company Intranet Portal" />
+        </div>
       </div>
     </main>
 
     <footer>
-      <p>
-        Contact:
-        <a href="mailto:jairyesidk@gmail.com">jairyesidk@gmail.com</a>
-      </p>
+      <p>Contact: <a href="mailto:jairyesidk@gmail.com">jairyesidk@gmail.com</a></p>
     </footer>
 
     <script src="script.js"></script>
