--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
     <main id="projects">
       <h2>My Projects</h2>
 
+        <!-- Project 4 -->
+        <div class="project">
+            <img src="images/project4.png" alt="Company Intranet Portal" />
+            <h3 id="project4-title">Corporate Intranet Portal</h3>
+            <p id="project4-desc">
+              Migrated a legacy intranet to SharePoint using SPFx, React, and TypeScript, enabling role-based content management and scalable deployment.
+            </p>
+            <div class="additional-images">
+              <img src="images/project4.1.png" alt="Company Intranet Portal" />
+              <img src="images/project4.2.png" alt="Company Intranet Portal" />
+              <img src="images/project4.3.png" alt="Company Intranet Portal" />
+              <img src="images/project4.4.png" alt="Company Intranet Portal" />
+              <img src="images/project4.5.png" alt="Company Intranet Portal" />
+              <img src="images/project4.6.png" alt="Company Intranet Portal" />
+              <img src="images/project4.7.png" alt="Company Intranet Portal" />
+              <img src="images/project4.8.png" alt="Company Intranet Portal" />
+            </div>
+          </div>
+
       <!-- Project 1 -->
       <div class="project">
         <img src="images/project1.png" alt="Financial Operations Management" />
@@ -24,8 +43,8 @@
           Developed a SharePoint-based system using JavaScript, CSS, and HTML for web components, Power Automate for document creation and approvals, and SharePoint Online for secure storage.
         </p>
         <div class="additional-images">
-          <img src="images/project1-1.png" alt="Financial Operations Management" />
-          <img src="images/project1-2.png" alt="Financial Operations Management" />
+          <img src="images/project1.1.png" alt="Financial Operations Management" />
+          <img src="images/project1.2.png" alt="Financial Operations Management" />
         </div>
       </div>
 
@@ -37,9 +56,9 @@
           Designed a secure voting system using SharePoint, JavaScript, and Bootstrap, implementing real-time reporting and encrypted voting processes.
         </p>
         <div class="additional-images">
-          <img src="images/project2-1.png" alt="Company Voting System" />
-          <img src="images/project2-2.png" alt="Company Voting System" />
-          <img src="images/project2-3.png" alt="Company Voting System" />
+          <img src="images/project2.1.png" alt="Company Voting System" />
+          <img src="images/project2.2.png" alt="Company Voting System" />
+          <img src="images/project2.3.png" alt="Company Voting System" />
         </div>
       </div>
 
@@ -51,30 +70,14 @@
           Created a ticketing system for pricing offers and product management, integrated with Power Automate for approvals and Excel exports.
         </p>
         <div class="additional-images">
-          <img src="images/project3-1.png" alt="Corporate Requests System" />
-          <img src="images/project3-2.png" alt="Corporate Requests System" />
-          <img src="images/project3-3.png" alt="Corporate Requests System" />
-          <img src="images/project3-4.png" alt="Corporate Requests System" />
+          <img src="images/project3.1.png" alt="Corporate Requests System" />
+          <img src="images/project3.2.png" alt="Corporate Requests System" />
+          <img src="images/project3.3.png" alt="Corporate Requests System" />
+          <img src="images/project3.4.png" alt="Corporate Requests System" />
         </div>
       </div>
 
-      <!-- Project 4 -->
-      <div class="project">
-        <img src="images/project4.png" alt="Company Intranet Portal" />
-        <h3 id="project4-title">Corporate Intranet Portal</h3>
-        <p id="project4-desc">
-          Migrated a legacy intranet to SharePoint using SPFx, React, and TypeScript, enabling role-based content management and scalable deployment.
-        </p>
-        <div class="additional-images">
-          <img src="images/project4-1.png" alt="Company Intranet Portal" />
-          <img src="images/project4-2.png" alt="Company Intranet Portal" />
-          <img src="images/project4-3.png" alt="Company Intranet Portal" />
-          <img src="images/project4-4.png" alt="Company Intranet Portal" />
-          <img src="images/project4-5.png" alt="Company Intranet Portal" />
-          <img src="images/project4-6.png" alt="Company Intranet Portal" />
-          <img src="images/project4-7.png" alt="Company Intranet Portal" />
-        </div>
-      </div>
+    
     </main>
 
     <footer>
