--- a/index.html
+++ b/index.html
@@ -9,42 +9,54 @@
   <body>
     <header>
       <h1>Jair Y. Coronado A. | SharePoint Developer</h1>
-      <p>SPFx | React | TypeScript | Power Apps | Power Automate | PowerShell</p>
-      <button id="languageToggle">Español</button>
+      <p>
+        SPFx | React | TypeScript | Power Apps | Power Automate | PowerShell
+      </p>
+      <!-- <button id="languageToggle">Español</button> -->
     </header>
 
     <main id="projects">
       <h2>My Projects</h2>
 
-        <!-- Project 4 -->
-        <div class="project">
-            <img src="images/project4.png" alt="Company Intranet Portal" />
-            <h3 id="project4-title">Corporate Intranet Portal</h3>
-            <p id="project4-desc">
-              Migrated a legacy intranet to SharePoint using SPFx, React, and TypeScript, enabling role-based content management and scalable deployment.
-            </p>
-            <div class="additional-images">
-              <img src="images/project4.1.png" alt="Company Intranet Portal" />
-              <img src="images/project4.2.png" alt="Company Intranet Portal" />
-              <img src="images/project4.3.png" alt="Company Intranet Portal" />
-              <img src="images/project4.4.png" alt="Company Intranet Portal" />
-              <img src="images/project4.5.png" alt="Company Intranet Portal" />
-              <img src="images/project4.6.png" alt="Company Intranet Portal" />
-              <img src="images/project4.7.png" alt="Company Intranet Portal" />
-              <img src="images/project4.8.png" alt="Company Intranet Portal" />
-            </div>
-          </div>
+      <!-- Project 4 -->
+      <div class="project">
+        <img src="images/project4.png" alt="Company Intranet Portal" />
+        <h3 id="project4-title">Corporate Intranet Portal</h3>
+        <p id="project4-desc">
+          Migrated a legacy intranet to SharePoint using SPFx, React, and
+          TypeScript, enabling role-based content management and scalable
+          deployment.
+        </p>
+        <div class="additional-images">
+          <img src="images/project4.1.png" alt="Company Intranet Portal" />
+          <img src="images/project4.2.png" alt="Company Intranet Portal" />
+          <img src="images/project4.3.png" alt="Company Intranet Portal" />
+          <img src="images/project4.4.png" alt="Company Intranet Portal" />
+          <img src="images/project4.5.png" alt="Company Intranet Portal" />
+          <img src="images/project4.6.png" alt="Company Intranet Portal" />
+          <img src="images/project4.7.png" alt="Company Intranet Portal" />
+          <img src="images/project4.8.png" alt="Company Intranet Portal" />
+        </div>
+      </div>
 
       <!-- Project 1 -->
       <div class="project">
         <img src="images/project1.png" alt="Financial Operations Management" />
         <h3 id="project1-title">Financial Operations Management</h3>
         <p id="project1-desc">
-          Developed a SharePoint-based system using JavaScript, CSS, and HTML for web components, Power Automate for document creation and approvals, and SharePoint Online for secure storage.
+          Developed a SharePoint-based system using JavaScript, CSS, and HTML
+          for web components, Power Automate for document creation and
+          approvals, and SharePoint Online for secure storage.
         </p>
         <div class="additional-images">
-          <img src="images/project1.1.png" alt="Financial Operations Management" />
-          <img src="images/project1.2.png" alt="Financial Operations Management" />
+          <img
+            src="images/project1.1.png"
+            alt="Financial Operations Management"
+          />
+          <img
+            src="images/project1.2.png"
+            alt="Financial Operations Management"
+          />
         </div>
       </div>
 
@@ -53,7 +65,9 @@
         <img src="images/project2.png" alt="Company Voting System" />
         <h3 id="project2-title">Company Voting System</h3>
         <p id="project2-desc">
-          Designed a secure voting system using SharePoint, JavaScript, and Bootstrap, implementing real-time reporting and encrypted voting processes.
+          Designed a secure voting system using SharePoint, JavaScript, and
+          Bootstrap, implementing real-time reporting and encrypted voting
+          processes.
         </p>
         <div class="additional-images">
           <img src="images/project2.1.png" alt="Company Voting System" />
@@ -67,19 +81,33 @@
         <img src="images/project3.png" alt="Corporate Requests System" />
         <h3 id="project3-title">Corporate Requests System</h3>
         <p id="project3-desc">
-          Created a ticketing system for pricing offers and product management, integrated with Power Automate for approvals and Excel exports.
+          Created a ticketing system for pricing offers and product management,
+          integrated with Power Automate for approvals and Excel exports.
         </p>
         <div class="additional-images">
           <img src="images/project3.1.png" alt="Corporate Requests System" />
           <img src="images/project3.2.png" alt="Corporate Requests System" />
+          <img src="images/project3.3.png" alt="Corporate Requests System" />
+          <img src="images/project3.4.png" alt="Corporate Requests System" />
+          <img src="images/project3.5.png" alt="Corporate Requests System" />
+          <img src="images/project3.6.png" alt="Corporate Requests System" />
+          <img src="images/project3.7.png" alt="Corporate Requests System" />
+          <img src="images/project3.8.png" alt="Corporate Requests System" />
+          <img src="images/project3.9.png" alt="Corporate Requests System" />
         </div>
       </div>
-
-    
     </main>
 
     <footer>
-      <p>Contact: <a href="mailto:jairyesidk@gmail.com">jairyesidk@gmail.com</a></p>
+      <p>
+        Contact: <a href="mailto:jairyesidk@gmail.com">jairyesidk@gmail.com</a>
+      </p>
+      <p>
+        LinkedIn:
+        <a href="https://www.linkedin.com/in/jaircoronadoalbarracin/"
+          >https://www.linkedin.com/in/jaircoronadoalbarracin/</a
+        >
+      </p>
     </footer>
 
     <script src="script.js"></script>
