add Project 5: P10 Intranet Portal with images and updated styles

--- a/index.html
+++ b/index.html
@@ -96,6 +96,20 @@
           <img src="images/project3.9.png" alt="Corporate Requests System" />
         </div>
       </div>
+
+      <!-- Project 5 -->
+      <div class="project">
+        <img src="images/project5.png" alt="P10 Intranet Portal" />
+        <h3 id="project5-title">P10 Intranet Portal</h3>
+        <p id="project5-desc">
+          Developed an intranet portal for P10 company where all information and images are managed through SharePoint lists and libraries, providing ease of use for users. Additionally, implemented a real-time stock ticker with graphical representation of the stock value.
+        </p>
+        <div class="additional-images">
+          <img src="images/project5.1.png" alt="P10 Intranet Portal" />
+          <img src="images/project5.2.png" alt="P10 Intranet Portal" />
+          <img src="images/project5.3.png" alt="P10 Intranet Portal" />
+        </div>
+      </div>
     </main>
 
     <footer>
